# finance-tracker

./: .dockerignore  .gitignore  CLAUDE.md  DESIGN.md  Makefile  docker-compose.yml
backend/: Dockerfile  Makefile  alembic.ini  mypy.ini  pyproject.toml
backend/lints/: check_layers.py  check_response_format.py
backend/migrations/: env.py
backend/migrations/versions/: 1336ca897ff4_init_create_transactions_and_categories_.py  add_category_match_rules.py  add_trade_no.py  add_user_id_columns.py
backend/src/: __init__.py
backend/src/api/: __init__.py  auth.py  categories.py  dependencies.py  deps.py  imports.py  main.py  notifications.py  responses.py  rules.py  schemas.py  stats.py  transactions.py
backend/src/config/: __init__.py  database.py  migrations.py
backend/src/parsers/: __init__.py  alipay.py  bank.py  base.py  facade.py  wechat.py
backend/src/repository/: __init__.py  category.py  category_match_rule.py  models.py  transaction.py  user.py
backend/src/schemas/: __init__.py  category.py  category_match_rule.py  notification.py  raw_parse.py  response.py  transaction.py  user.py
backend/src/service/: __init__.py  auth.py  category_matcher.py  notification.py  transaction.py
backend/tests/: conftest.py
backend/tests/api/: test_api.py
backend/tests/parsers/: test_bank.py
backend/tests/repository/: __init__.py  test_category.py  test_category_match_rule.py  test_transaction.py
backend/tests/schemas/: __init__.py  test_category.py  test_response.py  test_transaction.py
backend/tests/service/: test_category_matcher.py  test_notification.py  (+1 more)
(+111 files in other folders)
