[project]
name = "finance-tracker-backend"
version = "0.1.0"
description = "Finance Tracker Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "email-validator>=2.0",
    "aiosqlite>=0.19.0",
    "openapi-pydantic>=0.5.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "sqlalchemy[asyncio]>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.15.0",
    "mypy>=1.0",
    "types-python-jose",
    "types-passlib",
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
src = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "src/config/migrations.py",
    "src/api/dependencies.py",
    "src/**/__init__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "mypy>=1.20.2",
]
